--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -6,7 +6,9 @@
     </head>
     
     <body>
+       <img src="images/arduino.jpg" alt="arduino" title="arduino">
         <h1>MakeBot</h1>
         <p>We sell electronic components for your learning needs.</p>
+        <p id="second">We sell electronic components for your learning needs.</p>
     </body>
 </html>
